--- a/service.html
+++ b/service.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+ 
 <head>
   <!-- Basic -->
   <meta charset="utf-8" />
@@ -133,7 +133,7 @@
     <div class="container">
       <div class="heading_container heading_center ">
         <h2 class="">
-          Our Services
+          Finter Services
         </h2>
         <p class="col-lg-8 px-0">
           If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
