--- a/team.html
+++ b/team.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html> 
 
 <head>
   <!-- Basic -->
@@ -132,7 +132,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Our Team
+          Finter Team
         </h2>
         <p>
           Lorem ipsum dolor sit amet, non odio tincidunt ut ante, lorem a euismod suspendisse vel, sed quam nulla mauris
